feat: synchronize DTOs/Enums and finalize core security setup
- Align TaskStatus enums (PENDING, ACTIVE, NEED_REVIEW, COMPLETED, ARCHIVED) between Spring Boot and TanStack Start.
- Finalize JWT lifecycle management with Redis-backed refresh tokens and session versioning.
- Implement core authentication, project management, and task review endpoints.
- Update frontend API clients and hooks to reflect backend DTO changes.
- Add comprehensive backend synchronization specs and architecture context.